@@ -9,28 +9,32 @@ use Test::Consul;
 
 use Consul;
 
-my $tc = Test::Consul->start;
+my $tc = eval { Test::Consul->start };
 
-my $kv = Consul->kv(port => $tc->port);
-ok $kv, "got KV API object";
+SKIP: {
+    skip "consul test environment not available", 12 unless $tc;
 
-my $r;
+    my $kv = Consul->kv(port => $tc->port);
+    ok $kv, "got KV API object";
 
-throws_ok { $r = $kv->get("foo") } qr/^404 /, "key not found";
+    my $r;
 
-lives_ok { $r = $kv->put(foo => "bar") } "KV put succeeded";
-lives_ok { $r = $kv->get("foo") } "KV get succeeded";
+    throws_ok { $r = $kv->get("foo") } qr/^404 /, "key not found";
 
-is $r->value, "bar", "returned KV has correct value";
+    lives_ok { $r = $kv->put(foo => "bar") } "KV put succeeded";
+    lives_ok { $r = $kv->get("foo") } "KV get succeeded";
 
-lives_ok { $r = $kv->delete("foo") } "KV delete succeeded";
-throws_ok { $r = $kv->get("foo") } qr/^404 /, "key not found";
+    is $r->value, "bar", "returned KV has correct value";
 
-lives_ok { $r = $kv->put(foo => 1) } "KV put succeeded";
-lives_ok { $r = $kv->put(bar => 2) } "KV put succeeded";
-lives_ok { $r = $kv->put(baz => 3) } "KV put succeeded";
+    lives_ok { $r = $kv->delete("foo") } "KV delete succeeded";
+    throws_ok { $r = $kv->get("foo") } qr/^404 /, "key not found";
 
-lives_ok { $r = $kv->keys("") } "KV keys succeeded";
-is_deeply [sort @$r], [sort qw(foo bar baz)], "return KV keys are correct";
+    lives_ok { $r = $kv->put(foo => 1) } "KV put succeeded";
+    lives_ok { $r = $kv->put(bar => 2) } "KV put succeeded";
+    lives_ok { $r = $kv->put(baz => 3) } "KV put succeeded";
+
+    lives_ok { $r = $kv->keys("") } "KV keys succeeded";
+    is_deeply [sort @$r], [sort qw(foo bar baz)], "return KV keys are correct";
+}
 
 done_testing;
